--- a/zingen.html
+++ b/zingen.html
@@ -1,4 +1,26 @@
-<!DOCTYPE html>
+<header>
+  <div class="py-base">
+    <nav class="flex items-center gap-1.5">
+      <a href="#">
+        <img src="assets/logo.svg" alt="Logo do Zingen" loading="lazy">
+      </a>
+      <ul class="nav-links desktop-only">
+        <li><a href="#about">Conheça o app</a></li>
+        <li><a href="#features">Funcionalidades</a></li>
+        <li><a href="#pricing">Planos e Preços</a></li>
+      </ul>
+      <a href="#download" class="btn btn-sm">Baixar Agora</a>
+    </nav>
+  </div>
+  <h1 class="title">Zingen</h1>
+  <p class="subtitle">O melhor karaokê do Brasil</p>
+  <ul class="social-links">
+    <li><a href="#" class="social" aria-label="tiktok"></a></li>
+    <li><a href="#" class="social" aria-label="instagram"></a></li>
+    <li><a href="#" class="social" aria-label="discord"></a></li>
+    <li><a href="#" class="social" aria-label="twitter"></a></li>
+  </ul>
+</header><!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
