--- a/zingen.html
+++ b/zingen.html
@@ -1,57 +1,47 @@
-<header>
-  <div class="py-base">
-    <nav class="flex items-center gap-1.5">
-      <a href="#">
-        <img src="assets/logo.svg" alt="Logo do Zingen" loading="lazy">
-      </a>
-      <ul class="nav-links desktop-only">
-        <li><a href="#about">Conheça o app</a></li>
-        <li><a href="#features">Funcionalidades</a></li>
-        <li><a href="#pricing">Planos e Preços</a></li>
-      </ul>
-      <a href="#download" class="btn btn-sm">Baixar Agora</a>
-    </nav>
-  </div>
-  <h1 class="title">Zingen</h1>
-  <p class="subtitle">O melhor karaokê do Brasil</p>
-  <ul class="social-links">
-    <li><a href="#" class="social" aria-label="tiktok"></a></li>
-    <li><a href="#" class="social" aria-label="instagram"></a></li>
-    <li><a href="#" class="social" aria-label="discord"></a></li>
-    <li><a href="#" class="social" aria-label="twitter"></a></li>
-  </ul>
-</header><!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zingen - karaokê </title>
-    <link rel="stylesheet" href="styles/index.css">
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zingen - Karaokê</title>
+    <link rel="stylesheet" href="styles/index.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
-</head>
-<body>
-  <header>
-    <div class="py-base">
-      <nav class="flex items-center gap-1\.5z">
-        <a href="#">
-          <img src="assets/logo.svg" alt="Logo do Zingen">    
-        </a> 
-        <a href="#about" class="desktop-only">Conheça o app</a>
-        <a href="#features" class="desktop-only">Funcionalidades</a>
-        <a href="#pricing" class="desktop-only">Planos e Preços</a>
-        
-        <a href="#download" class="btn btn-sm">Baixar Agora</a>
-      </nav>
-    </div>
-    <h1 class="title">Zingen</h1>
-    <p class="subtitle">O melhor karaokê do Brasil</p>
-  <a href="#" class="social" aria-label="tiktok"></a>
-  <a href="#" class="social" aria-label="instagram"></a>
-  <a href="#" class="social" aria-label="discord"></a>
-  <a href="#" class="social" aria-label="twitter"></a>
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="container py-base">
+        <nav class="flex items-center gap-1.5">
+          <a href="#">
+            <img src="assets/logo.svg" alt="Logo Zingen" />
+          </a>
+
+          <a href="#about" class="desktop-only">Conheça o app</a>
+          <a href="#features" class="desktop-only">Funcionalidades</a>
+          <a href="#pricing" class="desktop-only">Planos e preços</a>
+
+          <a href="#download" class="btn btn-sm">Baixar agora</a>
+        </nav>
+      </div>
+    </header>
+
+    <section class="hero">
+      <div class="container py-xl">
+        <img src="assets/music-bars.svg" alt="">
+        <h1>Quem canta os males espanta </h1>
+       <p>Cantar nunca foi tão fácil</p>
+
+
+       <div class="buttons flex items-center gap-1">
+        <a href="#princing" aria-label="ver planos" class="btn-md"></a>
+        <a href="#download" class="btn btn-md">Baixar agora</a>
+
+       </div>
+  </body>
 </html>
