--- a/zingen.html
+++ b/zingen.html
@@ -107,9 +107,10 @@
         <div class="card py-lg px-lg">
           <div>
             <img src="assets/icons/UsersThree.svg" alt="" />
-            <h3>Compartilhe com a comunidade</h3>
+            <h3>Experiência gamificada</h3>
             <p>
-              Compartilhe suas gravações com a comunidade, interaja e explore a performance vocal de outras pessoas no seu feed!
+              Sua performance é pontuada de acordo com nosso algoritmo ultra
+              preciso. Desafie-se, ganhe reconhecimento e comemore sua evolução!
             </p>
           </div>
           <img class="desktop-only" src="assets/Tela 1.png" alt="" />
@@ -117,16 +118,18 @@
 
         <div class="card py-lg px-lg">
           <div>
-            <img src="assets/icons /MusicNotes.svg" alt="" />
-            <h3>Letras em tempo-real</h3>
+            <img src="assets/icons/MusicNotes.svg" alt="" />
+            <h3>Experiência gamificada</h3>
             <p>
-              Nunca perca o ritmo com as letras das músicas sincronizadas e exibidas em tempo real. Você também pode ativar a voz original da música para ajudar.
+              Sua performance é pontuada de acordo com nosso algoritmo ultra
+              preciso. Desafie-se, ganhe reconhecimento e comemore sua evolução!
             </p>
           </div>
           <img class="desktop-only" src="assets/Tela 3.png" alt="" />
         </div>
       </div>
     </section>
+
     <section id="pricing">
       <div class="container py-xl">
         <header>
@@ -135,24 +138,30 @@
         </header>
 
         <div class="cards even-columns items-center">
+          <div class="card py-lg px-lg">
+            <h3>Básico</h3>
+            <p>Baixe o app e comece a cantar agora mesmo!</p>
+            <zin-pricing>Grátis</zin-pricing>
+            <a
+              href="#download"
+              class="btn btn-md"
+              aria-label="Baixar agora"
+            ></a>
+            <div class="separator"></div>
+            <ul role="list" class="grid gap-1">
+              <li>Com anúncios</li>
+              <li>Até 5 músicas por dia</li>
+              <li>Cante apenas as músicas disponíveis no plano gratuito</li>
+            </ul>
+          </div>
+
+          <div class="premium">
             <div class="card py-lg px-lg">
-              <h3>Básico</h3>
-              <p>Baixe o app e comece a cantar agora mesmo!</p>
-              <zin-pricing>Grátis</zin-pricing>
-              <a href="#download" class="btn btn-md" aria-label="Baixar agora"></a>
-              <div class="separator"></div>
-              <ul role="list" class="grid gap-1">
-                <li>Com anúncios</li>
-                <li>Até 5 músicas por dia</li>
-                <li>Cante apenas as músicas disponíveis no plano gratuito</li>
-              </ul>
-            </div>
-  <div class="cards even-columns items-center">
-            <div class="card py-lg px-lg">
-              <h3>Família</h3>
-              <p>Para aquelas famílias que adoram se reunir pra cantar   </p>
-              <zin-pricing>R$ 21,90 <small>/mês por pessoa</small></zin-pricing>
-              <a href="" class="btn btn-md" aria-label="Assinar agora"></a>
+              <span>1 mês grátis</span>
+              <h3>Premium</h3>
+              <p>Ideal para quem já cansou de passar vergonha no Karaokê</p>
+              <zin-pricing>R$ 24,90 <small>/mês</small></zin-pricing>
+              <a href="#" class="btn btn-md">Experimente de graça</a>
               <div class="separator"></div>
               <ul role="list" class="grid gap-1">
                 <li>Sem interrupção de anúncios</li>
@@ -160,9 +169,59 @@
                 <li>Cante todas as músicas da biblioteca</li>
               </ul>
             </div>
+          </div>
 
+          <div class="card py-lg px-lg">
+            <h3>Família</h3>
+            <p>Para aquelas famílias que adoram se reunir pra cantar</p>
+            <zin-pricing>R$ 21,90 <small>/mês por pessoa</small></zin-pricing>
+            <a href="#" class="btn btn-md" aria-label="Assinar agora"></a>
+            <div class="separator"></div>
+            <ul role="list" class="grid gap-1">
+              <li>Sem interrupção de anúncios</li>
+              <li>Cante quantas músicas quiser</li>
+              <li>Cante todas as músicas da biblioteca</li>
+            </ul>
+
+            <small>Mínimo de 4 pessoas no plano família.</small>
+          </div>
         </div>
+      </div>
+    </section>
 
+    <section id="download">
+      <div class="container py-xl">
+        <div class="card px-lg even-columns items-center">
+          <div>
+            <header>
+              <strong>Download</strong>
+              <h2>Bora cantar?</h2>
+            </header>
+            <p>
+              Desperte seu potencial de estrela, liberte sua voz e faça parte da
+              comunidade musical mais envolvente. Baixe o Zingen agora e
+              transforme suas performances em experiências inesquecíveis!
+            </p>
+
+            <div class="buttons flex gap-1">
+              <a href="#"
+                ><img
+                  src="assets/button-appstore.svg"
+                  alt="Baixar da Apple Store"
+              /></a>
+              <a href="#"
+                ><img
+                  src="assets/button-playstore.svg"
+                  alt="Baixar da Play Store"
+              /></a>
+            </div>
+          </div>
+
+          <img
+            src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png"
+            alt=""
+          />
+        </div>
       </div>
     </section>
   </body>
