--- a/zingen.html
+++ b/zingen.html
@@ -199,7 +199,7 @@
             </header>
             <p>
               Desperte seu potencial de estrela, liberte sua voz e faça parte da
-              comunidade musical mais envolvente. Baixe o Zingen agora e
+              comunidade musical mais en volvente. Baixe o Zingen agora e
               transforme suas performances em experiências inesquecíveis!
             </p>
 
@@ -224,5 +224,64 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container px-xl grid">
+        <section class="grid top"></section>
+        <img src="assets/logo.svg" alt="Segunda logo Zingen" />
+
+        <nav class="even-columns">
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Produto</li>
+            <li>
+              <a href="#features">funcionalidades</a>
+            </li>
+            <li>
+              <a href="#princing">Planos e preços</a>
+            </li>
+            <li>
+              <a href="#download">Download</a>
+            </li>
+          </ul>
+
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Empresa</li>
+
+               <li>
+              <a href="about">Sobre nós</a>
+            </li>
+            <li>
+              <a href="#">Trabalhe conosco</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
+          </ul>
+            <ul role="list" class="grid gap-1.5">
+            <li class="title">Legal</li>
+
+               <li>
+              <a href="#">Termos de uso</a>
+            </li>
+            <li>
+              <a href="#">Política de privacidade</a>
+            </li>
+           
+          </ul>
+          </ul>
+        </nav>
+
+        <section class="bottom flex gap-1.5">
+          <div class="flex gap-1.5">
+            <a href="#" class="social" aria-label="tiktok"></a>
+            <a href="#" class="social" aria-label="instagram"></a>
+            <a href="#" class="social" aria-label="twitter"></a>
+            <a href="#" class="social" aria-label="discord"></a>
+          </div>
+          <span class="copy">©2024 Zingen Technologies, Inc.</span>
+        </section>
+      </div>
+    </footer>
+
   </body>
 </html>
